--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
       </form>
     </div>
 
+    <footer>
+      <p>Made with ❤️ by Vollum</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
   </body>
