Added export to CSV, dark mode toggle, and improved UI updates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
 
         <button type="submit">Add Non-Donated Entry</button>
       </form>
+
+      <div class="summary">
+        <h2>Quick Summary</h2>
+        <p>Total Donated: <span id="total-summary">0</span> NOK</p>
+        <p>Total Non-Donated: <span id="non-donated-summary">0</span> NOK</p>
+        <p>Total Lottery Winnings: <span id="lottery-summary">0</span> NOK</p>
+      </div>
     </div>
+
+    <button id="dark-mode-toggle">Toggle Dark Mode</button>
 
     <footer>
       <p>Made with ❤️ by Vollum</p>
