Enhanced styling for a chic and playful design, added animations and improved responsiveness

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <p>Total Donated: <span id="total-summary">0</span> NOK</p>
         <p>Total Non-Donated: <span id="non-donated-summary">0</span> NOK</p>
         <p>Total Lottery Winnings: <span id="lottery-summary">0</span> NOK</p>
+        <p>
+          <strong>Grand Total: <span id="grand-total">0</span> NOK</strong>
+        </p>
       </div>
     </div>
 
