Added dynamic total updates for donated and non-donated sections, ensured charts display all months

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </form>
 
       <h2>Entries</h2>
-      <h2>Total Donated: <span id="total">0</span> NOK</h2>
+      <h2>Total Donated: <span id="donated-total">0</span> NOK</h2>
       <h2>Total Lottery Earnings: <span id="lottery-total">0</span> NOK</h2>
 
       <label for="month-filter">Filter by Month:</label>
@@ -50,7 +50,7 @@
 
       <h2>Non-Donated Pant</h2>
       <ul id="non-donated-list"></ul>
-      <h3>Total Non-Donated: <span id="non-donated-total">0</span> NOK</h3>
+      <h2>Total Non-Donated: <span id="non-donated-total">0</span> NOK</h2>
 
       <h2>Record Non-Donated Pant</h2>
       <form id="non-donated-form">
